# craftinginterpreters

./: .gitignore  README.md
chapter1/: README.md
chapter1/c-double-linked-list/: Makefile  dllists.c  dllists.h  main.c  tests.c
chapter1/challenge3/: CMakeLists.txt  Makefile  README.md  main.c  tests.c
chapter1/challenges/: dllists.h
chapter4/: README.md
chapter4/jli/: Cargo.toml
chapter4/jli/samples/: comments1.lox  numbers.lox  strings.lox
chapter4/jli/src/: lib.rs  main.rs
chapter4/jlinom/: Cargo.toml  README.md
chapter4/jlinom/samples/: comments2.lox  strings.lox
chapter4/jlinom/src/: lib.rs  main.rs
chapter5/: Cargo.toml  README.md
chapter5-7/samples/: expr1.lox  expr2.lox  nested_comments_unterminated.lox  nonnested_comments.lox  sample1.lox  sample2.lox
chapter5-7/src/: lib.rs  main.rs  parse.rs  scan.rs
chapter5/samples/: eol_comments.lox  expr2.lox  nested_comments.lox
chapter5/src/: ast.rs  eval.rs  lib.rs  main.rs  parse.rs  scan.rs
chapter8-13/: AGENTS.md  Cargo.toml  README.md
chapter8-13/samples/: blocks1.lox  blocks2.lox  blocks3.lox  blocks4.lox  conditionals1.lox  conditionals2.lox  eol_comments.lox  expr1.lox  expr2.lox  expr3.lox  for.lox  for2.lox  for3.lox  functions1.lox  logical1.lox  print_expr1.lox  variables0.lox  variables1.lox  while1.lox
chapter8-13/src/: eval.rs  main.rs  parse.rs  scan.rs
