[package]
name = "rlox"
version = "0.1.0"
edition = "2024"

[lib]
name = "rlox"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rustyline = "17.0.2"
nom = "8.0.0"
nom_locate = "5.0.0"
structopt = "0.3.26"

[dev-dependencies]
pretty_assertions = "1.2.1"
